--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button8_2.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button8_2.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="\n Mantık  operatörleri Doğru değerini sayı türüne dönüştürürsek 1 ddeğeri gösterir. \n"
+        android:text="\n Mantık  operatörleri Doğru değerini sayı türüne dönüştürürsek 1 değeri gösterir. \n"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView140"
@@ -69,9 +69,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:onClick="calistirAlgo8_2"
         android:text="ÇALIŞTIR"
-        android:textColor="@color/colorPrimary"
+
         app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo8_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
