--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button8_8.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button8_8.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="\n kosu = Yanlış \n sut = Doğru \n sonuc = kosu ve sut \n Goster(sonuc)\n"
+        android:text="\n kosu = Yanlış \n sut = Doğru \n sonuc = kosu veya sut \n Goster(sonuc)\n"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView152"
@@ -72,9 +72,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips_button"
+        android:textColor="@color/colorPrimary"
         android:onClick="calistirAlgo8_8"
         android:text="ÇALIŞTIR"
-        android:textColor="@color/colorPrimary"
+
         app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo8_8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
